# lgsm

./: .gitattributes  .gitignore  README.md  notes.md  pyproject.toml
.github/workflows/: main.yml
config/: color_mse.yaml  default_config.yaml  infoVAE_a0.yaml  infoVAE_a1.yaml  infoVAE_a1_b1e3_lessReg.yaml  infoVAE_a1_lessReg.yaml  infoVAE_a1_lessReg_4feat.yaml  infoVAE_a1_lessReg_colorMSE.yaml  slope_loss.yaml  spectral_loss.yaml
data/processed/: simulated_photometry.pkl.REMOVED.git-id
data/raw/: simulated_seds.pkl.REMOVED.git-id
lgsm/: __init__.py  lgsm_model.py  lgsmodel.py  losses.py  physicsLayer.py  physics_layer.py  plotting.py  sed_utils.py  utils.py  vae.py
models/color_mse_model/: initial_states.pkl  model.pkl  states.pkl
models/default_model/: initial_states.pkl  model.pkl  states.pkl
models/infoVAE_a0_model/: initial_states.pkl  model.pkl  states.pkl
models/infoVAE_a1_b1e3_lessReg_model/: model.pkl  states.pkl
models/infoVAE_a1_lessReg_4feat_model/: initial_states.pkl  model.pkl  states.pkl
models/infoVAE_a1_lessReg_colorMSE_model/: initial_states.pkl  model.pkl  states.pkl
models/infoVAE_a1_lessReg_model/: initial_states.pkl  model.pkl  states.pkl
models/infoVAE_a1_model/: model.pkl  states.pkl
models/slope_loss_model/: initial_states.pkl  model.pkl  states.pkl
models/spectral_loss_model/: initial_states.pkl  model.pkl  states.pkl
notebooks/: pairplot.ipynb  seaborn_test.ipynb  temp.ipynb
results/color_mse/: full_config.yaml
results/default/: full_config.yaml
tests/: test_init.py
workflow/: Snakefile  config_control.py
(+14 files in other folders)
